--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
