--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.2",
+    "react-router": "^6.4.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
     "usehooks-ts": "^2.6.0",
