--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
     "typescript": "^4.8.2",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
