--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,17 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "es6",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "jsx": "react",
     "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
-  "include": [
-    "src"
-  ]
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/components/*"],
+      "_/*": ["src/_helpers/*", "src/_hooks/*", "src/_services/*"]
+    },
+    "allowSyntheticDefaultImports": true
+  }
 }
