--- a/package.json
+++ b/package.json
@@ -1,61 +1,55 @@
 {
-  "name": "kinopoisk",
-  "version": "0.1.0",
+  "name": "lll",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "private": true,
+  "scripts": {
+    "start": "webpack serve",
+    "watch": "webpack --watch",
+    "build": "set NODE_ENV=production&& webpack",
+    "build-dev": "webpack"
+  },
+  "author": "Nazar Bugaichuk",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less-loader": "^11.1.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "react-refresh": "^0.14.0",
+    "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "node-sass": "^7.0.1",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-dom": "^18.0.7",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.6.0",
     "react-loading": "^2.0.3",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.4.0",
-    "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-redux": "^8.0.4",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "react-tabs": "^5.1.0",
-    "typescript": "^4.8.2",
-    "usehooks-ts": "^2.6.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-plugin-named-exports-order": "0.0.2",
-    "prop-types": "^15.8.1",
-    "webpack": "^5.74.0"
+    "redux": "^4.2.0",
+    "sass": "^1.55.0",
+    "usehooks-ts": "^2.9.1"
   }
 }
