--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
