--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-loading": "^2.0.3",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
+    "react-responsive-pagination": "^1.9.0",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "react-tabs": "^5.1.0",
     "typescript": "^4.8.2",
     "usehooks-ts": "^2.6.0",
